--- a/src/inspiration.html
+++ b/src/inspiration.html
@@ -402,8 +402,8 @@
 
 
 
-   <!-- Footer -->
-  <footer class="bg-gray-800">
+   <!-- Footer start -->
+   <footer class="bg-black">
     <div class="mx-auto container py-16 pb-7 xl:px-20 lg:px-12 sm:px-6 px-4">
         <div class="grid grid-cols-2 md:grid-cols-3 lg:grid-cols-3 xl:grid-cols-4 md:gap-8 gap-4">
             <div class="flex flex-col flex-shrink-0">
@@ -411,12 +411,13 @@
                     Lunefuld Lykke
                 </div>
                 <a href="index.html">
-                  <img class="mt-10 w-40 h-auto" src="/src/content/lunefuld-lykke-white.svg" alt="">
+                  <img class="mt-5 w-40 h-auto" src="/src/content/lunefuld-lykke-white.svg" alt="">
                 </a>
-                <div class="flex items-center mt-10 gap-x-4">
-                    <!-- INSTAGRAM -->
+                <p class="text-xs mt-5 leading-none text-gray-400">Copyright © 2022 Lunefuld Lykke</p>
+                <div class="flex items-center mt-7 gap-x-4">
+                    <!-- Instagram -->
                     <button aria-label="instagram"
-                        class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 w-9 h-9 flex-shrink-0 bg-gray-800 cursor-pointer hover:bg-gray-700 rounded-full flex items-center justify-center">
+                        class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 w-9 h-9 flex-shrink-0 bg-black cursor-pointer hover:bg-white hover:bg-opacity-20 rounded-full flex items-center justify-center">
                         <svg width="25" height="auto" viewBox="0 0 18 17" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd"
@@ -424,9 +425,9 @@
                                 fill="white" />
                         </svg>
                     </button>
-                    <!-- FACEBOOK -->
+                    <!-- Facebook -->
                     <button aria-label="facebook"
-                        class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 w-9 h-9 flex-shrink-0 bg-gray-800 cursor-pointer hover:bg-gray-700 rounded-full flex items-center justify-center">
+                    class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 w-9 h-9 flex-shrink-0 bg-black cursor-pointer hover:bg-white hover:bg-opacity-20 rounded-full flex items-center justify-center">
                         <svg width="27" height="auto" viewBox="0 0 24 24" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd"
@@ -434,9 +435,9 @@
                                 fill="white" />
                         </svg>
                     </button>
-                    <!-- YOUTUBE -->
+                    <!-- Youtube -->
                     <button aria-label="youtube"
-                        class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 w-9 h-9 flex-shrink-0 bg-gray-800 cursor-pointer hover:bg-gray-700 rounded-full flex items-center justify-center">
+                    class="focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-gray-800 w-9 h-9 flex-shrink-0 bg-black cursor-pointer hover:bg-white hover:bg-opacity-20 rounded-full flex items-center justify-center">
                         <svg width="25" height="auto" viewBox="0 0 18 13" fill="none"
                             xmlns="http://www.w3.org/2000/svg">
                             <path fill-rule="evenodd" clip-rule="evenodd"
@@ -448,28 +449,26 @@
             </div>
             <div class="flex flex-col">
                 <h2 class="text-base font-bold leading-4  text-white">Navigation</h2>
+                <a href="index.html"
+                    class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Forside</a>
                 <a href="plakater.html"
-                    class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">Shop plakater</a>
+                    class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Shop plakater</a>
                 <a href="litteratur.html"
-                    class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">Shop litteratur</a>
+                    class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Shop litteratur</a>
                 <a href="inspiration.html"
-                    class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">Inspiration</a>
-                <a href="om.html"
-                    class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">Om
-                    os
-                </a>
+                    class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Inspiration</a>
             </div>
             <div class="flex flex-col">
                 <h2 class="text-base font-bold mt-10 lg:mt-0 leading-4  text-white">Kundeservice</h2>
+                <a href="om.html"
+                    class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Om os
+                </a>
                 <a href="javascript:void(0)"
-                    class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">Kontakt
-                    policy</a>
+                    class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Kontakt os</a>
                 <a href="javascript:void(0)"
-                    class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">FAQ
-                    policy</a>
+                    class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">FAQ</a>
                 <a href="javascript:void(0)"
-                    class="focus:outline-none focus:underline hover:text-gray-500 text-base leading-4 mt-6  text-white cursor-pointer">Handelsbetingelser
-                    policy</a>
+                    class="focus:outline-none text-base leading-4 mt-6 w-fit text-gray-400 cursor-pointer hover:text-gray-300">Handelsbetingelser</a>
             </div>
             <div class="lg:block pt-0 mt-0 hidden">
                 <label class="text-base font-medium leading-4 text-white">Hold dig opdateret!</label>
@@ -506,10 +505,16 @@
               </div>
           </div>
         </div>
-        <p class="text-xs text-center mt-12 leading-none text-white">Copyright © 2022 Lunefuld Lykke</p>
+
+        <div class="flex justify-center bg-black mt-10  mx-auto">
+          <div class="flex items-center gap-x-7 justify-between">
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--logos" width="auto" height="20" preserveAspectRatio="xMidYMid meet" viewBox="0 0 256 83"><defs><linearGradient id="IconifyId17ff9a04b6e537b891272" x1="45.974%" x2="54.877%" y1="-2.006%" y2="100%"><stop offset="0%" stop-color="#222357"></stop><stop offset="100%" stop-color="#254AA5"></stop></linearGradient></defs><path fill="url(#IconifyId17ff9a04b6e537b891272)" d="M132.397 56.24c-.146-11.516 10.263-17.942 18.104-21.763c8.056-3.92 10.762-6.434 10.73-9.94c-.06-5.365-6.426-7.733-12.383-7.825c-10.393-.161-16.436 2.806-21.24 5.05l-3.744-17.519c4.82-2.221 13.745-4.158 23-4.243c21.725 0 35.938 10.724 36.015 27.351c.085 21.102-29.188 22.27-28.988 31.702c.069 2.86 2.798 5.912 8.778 6.688c2.96.392 11.131.692 20.395-3.574l3.636 16.95c-4.982 1.814-11.385 3.551-19.357 3.551c-20.448 0-34.83-10.87-34.946-26.428m89.241 24.968c-3.967 0-7.31-2.314-8.802-5.865L181.803 1.245h21.709l4.32 11.939h26.528l2.506-11.939H256l-16.697 79.963h-17.665m3.037-21.601l6.265-30.027h-17.158l10.893 30.027m-118.599 21.6L88.964 1.246h20.687l17.104 79.963h-20.679m-30.603 0L53.941 26.782l-8.71 46.277c-1.022 5.166-5.058 8.149-9.54 8.149H.493L0 78.886c7.226-1.568 15.436-4.097 20.41-6.803c3.044-1.653 3.912-3.098 4.912-7.026L41.819 1.245H63.68l33.516 79.963H75.473" transform="matrix(1 0 0 -1 0 82.668)"></path></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--logos" width="auto" height="25" preserveAspectRatio="xMidYMid meet" viewBox="0 0 256 199"><path d="M46.54 198.011V184.84c0-5.05-3.074-8.342-8.343-8.342c-2.634 0-5.488.878-7.464 3.732c-1.536-2.415-3.731-3.732-7.024-3.732c-2.196 0-4.39.658-6.147 3.073v-2.634h-4.61v21.074h4.61v-11.635c0-3.731 1.976-5.488 5.05-5.488c3.072 0 4.61 1.976 4.61 5.488v11.635h4.61v-11.635c0-3.731 2.194-5.488 5.048-5.488c3.074 0 4.61 1.976 4.61 5.488v11.635h5.05Zm68.271-21.074h-7.463v-6.366h-4.61v6.366h-4.171v4.17h4.17v9.66c0 4.83 1.976 7.683 7.245 7.683c1.976 0 4.17-.658 5.708-1.536l-1.318-3.952c-1.317.878-2.853 1.098-3.951 1.098c-2.195 0-3.073-1.317-3.073-3.513v-9.44h7.463v-4.17Zm39.076-.44c-2.634 0-4.39 1.318-5.488 3.074v-2.634h-4.61v21.074h4.61v-11.854c0-3.512 1.536-5.488 4.39-5.488c.878 0 1.976.22 2.854.439l1.317-4.39c-.878-.22-2.195-.22-3.073-.22Zm-59.052 2.196c-2.196-1.537-5.269-2.195-8.562-2.195c-5.268 0-8.78 2.634-8.78 6.805c0 3.513 2.634 5.488 7.244 6.147l2.195.22c2.415.438 3.732 1.097 3.732 2.195c0 1.536-1.756 2.634-4.83 2.634c-3.073 0-5.488-1.098-7.025-2.195l-2.195 3.512c2.415 1.756 5.708 2.634 9 2.634c6.147 0 9.66-2.853 9.66-6.805c0-3.732-2.854-5.708-7.245-6.366l-2.195-.22c-1.976-.22-3.512-.658-3.512-1.975c0-1.537 1.536-2.415 3.951-2.415c2.635 0 5.269 1.097 6.586 1.756l1.976-3.732Zm122.495-2.195c-2.635 0-4.391 1.317-5.489 3.073v-2.634h-4.61v21.074h4.61v-11.854c0-3.512 1.537-5.488 4.39-5.488c.879 0 1.977.22 2.855.439l1.317-4.39c-.878-.22-2.195-.22-3.073-.22Zm-58.833 10.976c0 6.366 4.39 10.976 11.196 10.976c3.073 0 5.268-.658 7.463-2.414l-2.195-3.732c-1.756 1.317-3.512 1.975-5.488 1.975c-3.732 0-6.366-2.634-6.366-6.805c0-3.951 2.634-6.586 6.366-6.805c1.976 0 3.732.658 5.488 1.976l2.195-3.732c-2.195-1.757-4.39-2.415-7.463-2.415c-6.806 0-11.196 4.61-11.196 10.976Zm42.588 0v-10.537h-4.61v2.634c-1.537-1.975-3.732-3.073-6.586-3.073c-5.927 0-10.537 4.61-10.537 10.976c0 6.366 4.61 10.976 10.537 10.976c3.073 0 5.269-1.097 6.586-3.073v2.634h4.61v-10.537Zm-16.904 0c0-3.732 2.415-6.805 6.366-6.805c3.732 0 6.367 2.854 6.367 6.805c0 3.732-2.635 6.805-6.367 6.805c-3.951-.22-6.366-3.073-6.366-6.805Zm-55.1-10.976c-6.147 0-10.538 4.39-10.538 10.976c0 6.586 4.39 10.976 10.757 10.976c3.073 0 6.147-.878 8.562-2.853l-2.196-3.293c-1.756 1.317-3.951 2.195-6.146 2.195c-2.854 0-5.708-1.317-6.367-5.05h15.587v-1.755c.22-6.806-3.732-11.196-9.66-11.196Zm0 3.951c2.853 0 4.83 1.757 5.268 5.05h-10.976c.439-2.854 2.415-5.05 5.708-5.05Zm114.372 7.025v-18.879h-4.61v10.976c-1.537-1.975-3.732-3.073-6.586-3.073c-5.927 0-10.537 4.61-10.537 10.976c0 6.366 4.61 10.976 10.537 10.976c3.074 0 5.269-1.097 6.586-3.073v2.634h4.61v-10.537Zm-16.903 0c0-3.732 2.414-6.805 6.366-6.805c3.732 0 6.366 2.854 6.366 6.805c0 3.732-2.634 6.805-6.366 6.805c-3.952-.22-6.366-3.073-6.366-6.805Zm-154.107 0v-10.537h-4.61v2.634c-1.537-1.975-3.732-3.073-6.586-3.073c-5.927 0-10.537 4.61-10.537 10.976c0 6.366 4.61 10.976 10.537 10.976c3.074 0 5.269-1.097 6.586-3.073v2.634h4.61v-10.537Zm-17.123 0c0-3.732 2.415-6.805 6.366-6.805c3.732 0 6.367 2.854 6.367 6.805c0 3.732-2.635 6.805-6.367 6.805c-3.951-.22-6.366-3.073-6.366-6.805Z"></path><path fill="#FF5F00" d="M93.298 16.903h69.15v124.251h-69.15z"></path><path fill="#EB001B" d="M97.689 79.029c0-25.245 11.854-47.637 30.074-62.126C114.373 6.366 97.47 0 79.03 0C35.343 0 0 35.343 0 79.029c0 43.685 35.343 79.029 79.029 79.029c18.44 0 35.343-6.366 48.734-16.904c-18.22-14.269-30.074-36.88-30.074-62.125Z"></path><path fill="#F79E1B" d="M255.746 79.029c0 43.685-35.343 79.029-79.029 79.029c-18.44 0-35.343-6.366-48.734-16.904c18.44-14.488 30.075-36.88 30.075-62.125c0-25.245-11.855-47.637-30.075-62.126C141.373 6.366 158.277 0 176.717 0c43.686 0 79.03 35.563 79.03 79.029Z"></path></svg>
+            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" aria-hidden="true" role="img" class="iconify iconify--logos" width="auto" height="23" preserveAspectRatio="xMidYMid meet" viewBox="0 0 256 302"><path fill="#27346A" d="M217.168 23.507C203.234 7.625 178.046.816 145.823.816h-93.52A13.393 13.393 0 0 0 39.076 12.11L.136 259.077c-.774 4.87 2.997 9.28 7.933 9.28h57.736l14.5-91.971l-.45 2.88c1.033-6.501 6.593-11.296 13.177-11.296h27.436c53.898 0 96.101-21.892 108.429-85.221c.366-1.873.683-3.696.957-5.477c-1.556-.824-1.556-.824 0 0c3.671-23.407-.025-39.34-12.686-53.765"></path><path fill="#27346A" d="M102.397 68.84a11.737 11.737 0 0 1 5.053-1.14h73.318c8.682 0 16.78.565 24.18 1.756a101.6 101.6 0 0 1 6.177 1.182a89.928 89.928 0 0 1 8.59 2.347c3.638 1.215 7.026 2.63 10.14 4.287c3.67-23.416-.026-39.34-12.687-53.765C203.226 7.625 178.046.816 145.823.816H52.295C45.71.816 40.108 5.61 39.076 12.11L.136 259.068c-.774 4.878 2.997 9.282 7.925 9.282h57.744L95.888 77.58a11.717 11.717 0 0 1 6.509-8.74Z"></path><path fill="#2790C3" d="M228.897 82.749c-12.328 63.32-54.53 85.221-108.429 85.221H93.024c-6.584 0-12.145 4.795-13.168 11.296L61.817 293.621c-.674 4.262 2.622 8.124 6.934 8.124h48.67a11.71 11.71 0 0 0 11.563-9.88l.474-2.48l9.173-58.136l.591-3.213a11.71 11.71 0 0 1 11.562-9.88h7.284c47.147 0 84.064-19.154 94.852-74.55c4.503-23.15 2.173-42.478-9.739-56.054c-3.613-4.112-8.1-7.508-13.327-10.28c-.283 1.79-.59 3.604-.957 5.477Z"></path><path fill="#1F264F" d="M216.952 72.128a89.928 89.928 0 0 0-5.818-1.49a109.904 109.904 0 0 0-6.177-1.174c-7.408-1.199-15.5-1.765-24.19-1.765h-73.309a11.57 11.57 0 0 0-5.053 1.149a11.683 11.683 0 0 0-6.51 8.74l-15.582 98.798l-.45 2.88c1.025-6.501 6.585-11.296 13.17-11.296h27.444c53.898 0 96.1-21.892 108.428-85.221c.367-1.873.675-3.688.958-5.477c-3.122-1.648-6.501-3.072-10.14-4.279a83.26 83.26 0 0 0-2.77-.865"></path></svg>
+          </div>          
     </div>
 </footer>
-<!-- Footer slut -->
+<!-- Footer end -->
 
     <script type="module" src="index.js"></script>
 </body>
